Bug 157628 - highlight tabulator not working
Summary: highlight tabulator not working
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-02-10 21:39 UTC by Roderick Colenbrander
Modified: 2008-02-29 17:54 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roderick Colenbrander 2008-02-10 21:39:14 UTC
Version:           3.0.1 (using Devel)
Installed from:    Compiled sources
OS:                Linux

Kate versions bundled with KDE 3.x (and earlier) show a different symbol for tabs and spaces when 'Highlight tabulators' is enabled. This is very useful for preventing tab/space mixups in source code.

I haven't got this option working on both the KDE 4.0.0 and 4.0.1 packages available in Debian. I have had this issue on two different Debian systems one of the two is 32bit and the other 64bit. I have also tried different fonts but other fonts also showed the problem.

Thanks,
Roderick
Comment 1 Dominik Haumann 2008-02-14 11:55:20 UTC
Huh? Kate in KDE3.x shows the *same* symbol for tabs and trailing spaces.
In KDE4 there are two options in the Editing tab:
1. [x] Highlight tabulators
2. [x] Highlight trailing spaces
If only 2 is enabled, trailing tabs and trailing spaces are highlighted as a small dot. If 1 and 2 are enabled, tabs are marked up as a small ยป sign.
Isn't that exactly what you are looking for?
Comment 2 Roderick Colenbrander 2008-02-14 12:53:36 UTC
I recently found the problem. The issue is that for some reason the default tabulator/space color was set to a color close to white. This caused them not to appear. I had this issue on two different Debian systems, so I would suspect there is a bug somewhere either in the Debian builds or in KDE 4.x itself. The default color shouldn't be white.
Comment 3 Dominik Haumann 2008-02-18 22:08:38 UTC
Indeed. There are lots of insane default colors :)
Comment 4 Dominik Haumann 2008-02-18 22:44:37 UTC
SVN commit 776844 by dhaumann:

for tab and trailing-space highlighting choose a much darker color (not almost white)
BUG: 157628


 M  +1 -1      kateconfig.cpp  
 M  +1 -1      kateschema.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=776844
Comment 5 Dominik Haumann 2008-02-18 22:45:53 UTC
SVN commit 776845 by dhaumann:

backport: for tab and trailing-space highlighting choose a dark color
CCBUG: 157628


 M  +1 -1      kateconfig.cpp  
 M  +1 -1      kateschema.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=776845
Comment 6 Matthew Woehlke 2008-02-19 17:13:26 UTC
Um... ShadowShade? Isn't that a bit overkill? What about re-using MidShade, or at least only DarkShade?

On second thought, I think the reason I used MidLight in the first place is because it works better with light-on-dark schemes (which might look equally bad now)... will investigate a patch.
Comment 7 Dominik Haumann 2008-02-19 20:52:39 UTC
it was almost invisible/white before. shadow is still (!) pretty light, but good enough readable, and you can see the difference to the text color.
Comment 8 Matthew Woehlke 2008-02-20 18:05:53 UTC
ShadowShade is unacceptable for light-on-dark schemes. Probably this needs to change based on the background color.

I've got a patch I'm testing now...
Comment 9 Matthew Woehlke 2008-02-29 17:50:58 UTC
SVN commit 780632 by mwoehlke:

Since no one has objected, let's try this new way of calculating default colors; it should work adequately for both dark and light color schemes (unlike either of the previous attempts that had problems with one or the other).

BUG: 157628


 M  +6 -3      kateconfig.cpp  
 M  +6 -3      kateschema.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=780632
Comment 10 Matthew Woehlke 2008-02-29 17:54:07 UTC
SVN commit 780634 by mwoehlke:

Backport 780632 to 4.0: new way of calculating default colors that should work adequately for both dark and light color schemes (unlike either of the previous attempts that had problems with one or the other)

CCBUG: 157628


 M  +6 -3      kateconfig.cpp  
 M  +6 -3      kateschema.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=780634