Since no one has objected, let's try this new way of calculating default colors; it should work adequately for both dark and light color schemes (unlike either of the previous attempts that had problems with one or the other).

BUG: 157628

svn path=/trunk/KDE/kdelibs/kate/; revision=780632